--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <style>
+
+    </style>
+    <script src = "./Javascript/script1.js"></script>
     <p>"asda"</p>
     <button>AdsfeA</button>
 </body>
