--- a/index.html
+++ b/index.html
@@ -13,5 +13,37 @@
     <script src = "./Javascript/script1.js"></script>
     <p>"asda"</p>
     <button>AdsfeA</button>
+
+    <table>
+        <tr="A">
+            <td="A1"></td>
+            <td="A2"></td>
+            <td="A3"></td>
+            <td="A4"></td>
+            <td="A5"></td>
+            <td="A6"></td>
+            <td="A7"></td>
+            <td="A8"></td>
+            <td="A9"></td>
+            <td="A10"></td>
+        </tr> 
+
+        <tr="B">
+            <td="B1"></td>
+            <td="B2"></td>
+            <td="B3"></td>
+            <td="B4"></td>
+            <td="B5"></td>
+            <td="B6"></td>
+            <td="B7"></td>
+            <td="B8"></td>
+            <td="B9"></td>
+            <td="B10"></td>
+        </tr>
+
+        <tr="C">
+            <td="C1"></td>
+        </tr>
+    </table>
 </body>
 </html>
